[tool.poetry]
name = "livevil_blog"
version = "0.1.0"
description = "blog powered by django"
authors = ["xlivevil <xlivevil@aliyun.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
django-contrib-comments = "^2.1.0"
coverage = "^5.5"
django-haystack = "^3.0"
django-allauth = "^0.44.0"
requests = "^2.25.1"
Pillow = "^8.2.0"
djangorestframework = "^3.12.4"
django-crispy-forms = "^1.11.2"
django-reversion = "^3.0.9"
mysqlclient = "^2.0.3"
django-redis = "^4.12.1"
django-filter = "^2.4.0"
django-mptt = "^0.12.0"
subdomains = "^3.0.1"
drf-haystack = "^1.8.10"
django-grappelli = "^2.15.1"
drf-yasg = "^1.20.0"
django-compressor = "^2.4.1"
daphne = "^3.0.2"
gunicorn = "^20.1.0"
elasticsearch = ">=5,<6"

[tool.poetry.dev-dependencies]
Faker = "^8.1.4"
fabric = "^2.6.0"
invoke = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
